更新 包名及module名称

--- a/src/main/resources/META-INF/properties/config.properties
+++ b/src/main/resources/META-INF/properties/config.properties
@@ -5,13 +5,13 @@ config.dir.source=E:/Projects/Exam/NewSys/test-generator-new/build
 config.dir.cache=../cache
 
 # 数据库存放目录
-config.db.path=../db/edu.sqlite
+config.db.path=E:/cms/db/edu.sqlite
 
 config.suffix=.package
 
 jdbc.driverClassName=org.sqlite.JDBC
 # 数据库存放目录
-jdbc.url=jdbc:sqlite:../db/edu.sqlite
+jdbc.url=jdbc:sqlite:E:/cms/db/edu.sqlite
 jdbc.username=itheima
 jdbc.password=itheimaupup
 
