--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,17 +14,17 @@
 
     <error-page>
         <error-code>400</error-code>
-        <location>/400</location>
+        <!--<location>/400</location>-->
     </error-page>
 
     <error-page>
         <error-code>404</error-code>
-        <location>/404</location>
+        <!--<location>/404</location>-->
     </error-page>
 
     <error-page>
         <error-code>500</error-code>
-        <location>/500</location>
+        <!--<location>/500</location>-->
     </error-page>
 
     <filter>
@@ -65,7 +65,7 @@
     <!-- Disables Servlet Container welcome file handling. Needed for compatibility
         with Servlet 3.0 and Tomcat 7.0 -->
     <welcome-file-list>
-        <welcome-file></welcome-file>
+        <welcome-file>/html/java.html</welcome-file>
     </welcome-file-list>
 
 </web-app>
