--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,4 +1,4 @@
 
-##
-config.dir.source=
-config.dir.root=
+## Liux: /root/newstrap Win:E:\cms\newstrap
+config.dir.root=E:/cms/newstrap
+config.dir.source=E:/cms/newstrap/exam
