更新 不再手动转换编码, 运行在tomcat8中

--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,4 +1,6 @@
 
-## Liux: /root/newstrap Win:E:\cms\newstrap
-config.dir.root=E:/cms/newstrap
-config.dir.source=E:/cms/newstrap/exam
+## Liux: /root/newstrap Win:E:/cms/newstrap
+#config.dir.root=/root/newstrap/
+#config.dir.source=/root/newstrap/exam/
+config.dir.root=E:/cms/newstrap/
+config.dir.source=E:/cms/newstrap/exam/
