--- a/web-tutorials/pom.xml
+++ b/web-tutorials/pom.xml
@@ -104,6 +104,18 @@
             <version>${project.build.version}</version>
         </dependency>
 
+        <!-- config redis data and client jar-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.8.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
