--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -4,3 +4,15 @@
 #config.dir.source=/root/newstrap/exam/
 config.dir.root=E:/cms/newstrap/
 config.dir.source=E:/cms/newstrap/exam/
+
+
+# Redis settings
+redis.host=120.76.238.32
+redis.port=6379
+redis.pass=
+
+redis.maxIdle=100
+redis.maxActive=100
+redis.maxWaitMillis=5000
+redis.testOnBorrow=true
+redis.testOnReturn=true
