配置 Dockder的路径

--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,10 +1,12 @@
 
 ## Liux: /root/newstrap Win:E:/cms/newstrap
-#config.dir.root=/root/newstrap/
-#config.dir.source=/root/newstrap/exam/
-config.dir.root=E:/cms/newstrap/
-config.dir.source=E:/cms/newstrap/exam/
+config.dir.root=/root/newstrap/
+config.dir.source=/root/newstrap/exam/
+#config.dir.root=E:/cms/newstrap/
+#config.dir.source=E:/cms/newstrap/exam/
 
+# Dockder
+docker.uri=http://localhost:2735
 
 # Redis settings
 redis.host=120.76.238.32
