[code]提交编译页面测试通过

--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,9 +1,9 @@
 
 ## Liux: /root/newstrap Win:E:/cms/newstrap
-config.dir.root=/root/newstrap/
-config.dir.source=/root/newstrap/exam/
-#config.dir.root=E:/cms/newstrap/
-#config.dir.source=E:/cms/newstrap/exam/
+#config.dir.root=/root/newstrap/
+#config.dir.source=/root/newstrap/exam/
+config.dir.root=E:/cms/newstrap/
+config.dir.source=E:/cms/newstrap/exam/
 
 # Dockder
 docker.uri=http://localhost:2735
