更新 配置为172.16.1.1的linux服务器

--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,15 +1,17 @@
 
 ## Liux: /root/newstrap Win:E:/cms/newstrap
-#config.dir.root=/root/newstrap/
-#config.dir.source=/root/newstrap/exam/
-config.dir.root=E:/cms/newstrap/
-config.dir.source=E:/cms/newstrap/exam/
+config.dir.root=/root/newstrap/
+config.dir.source=/root/newstrap/exam/
+#config.dir.root=E:/cms/newstrap/
+#config.dir.source=E:/cms/newstrap/exam/
+
+run.impl=runServiceLocalImpl
 
 # Dockder
 docker.uri=http://localhost:2735
 
 # Redis settings
-redis.host=120.76.238.32
+redis.host=127.0.0.1
 redis.port=6379
 redis.pass=
 
