--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,9 +1,9 @@
 
 ## Liux: /root/newstrap Win:E:/cms/newstrap
-config.dir.root=/root/newstrap/
-config.dir.source=/root/newstrap/exam/
-#config.dir.root=E:/cms/newstrap/
-#config.dir.source=E:/cms/newstrap/exam/
+#config.dir.root=/root/newstrap/
+#config.dir.source=/root/newstrap/exam/
+config.dir.root=E:/cms/newstrap/
+config.dir.source=E:/cms/newstrap/exam/
 
 run.impl=runServiceLocalImpl
 
@@ -11,7 +11,7 @@ run.impl=runServiceLocalImpl
 docker.uri=http://localhost:2735
 
 # Redis settings
-redis.host=127.0.0.1
+redis.host=120.76.238.32
 redis.port=6379
 redis.pass=
 
