添加 说明文档README.md

--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -5,7 +5,7 @@
 config.dir.root=E:/cms/newstrap/
 config.dir.source=E:/cms/newstrap/exam/
 
-run.impl=runServiceLocalImpl
+kotlin.home=G:/JetBrains/ideaIU-2017.1.4.win/plugins/Kotlin/kotlinc
 
 # Dockder
 docker.uri=http://localhost:2735
