--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -1,22 +1,24 @@
 
 ## Liux: /root/newstrap Win:E:/cms/newstrap
-#config.dir.root=/root/newstrap/
-#config.dir.source=/root/newstrap/exam/
-config.dir.root=E:/cms/newstrap/
-config.dir.source=E:/cms/newstrap/exam/
+config.dir.root=/root/newstrap/
+config.dir.source=/root/newstrap/exam/
+#config.dir.root=E:/cms/newstrap/
+#config.dir.source=E:/cms/newstrap/exam/
 
 kotlin.home=G:/JetBrains/ideaIU-2017.1.4.win/plugins/Kotlin/kotlinc
 
 # Dockder
-docker.uri=http://localhost:2735
+docker.uri=http://127.0.0.1:2735
+docker.image=java
+#docker.image=hub.c.163.com/library/java:8
 
 # Redis settings
-redis.host=120.76.238.32
+redis.host=127.0.0.1
 redis.port=6379
-redis.pass=
+redis.pass=poplarpoplar
 
 redis.maxIdle=100
-redis.maxActive=100
-redis.maxWaitMillis=5000
+redis.maxActive=300
+redis.maxWaitMillis=10000
 redis.testOnBorrow=true
 redis.testOnReturn=true
