--- a/web-tutorials/src/main/webapp/WEB-INF/web.xml
+++ b/web-tutorials/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,6 @@
     <!-- Disables Servlet Container welcome file handling. Needed for compatibility
         with Servlet 3.0 and Tomcat 7.0 -->
     <welcome-file-list>
-        <welcome-file>/html/java.html</welcome-file>
+        <welcome-file>/index</welcome-file>
     </welcome-file-list>
 </web-app>
