U 改了一堆bug U 更新了RunService基类

--- a/web-tutorials/src/main/resources/META-INF/properties/config.properties
+++ b/web-tutorials/src/main/resources/META-INF/properties/config.properties
@@ -5,7 +5,8 @@ config.dir.source=/root/newstrap/exam/
 #config.dir.root=E:/cms/newstrap/
 #config.dir.source=E:/cms/newstrap/exam/
 
-kotlin.home=G:/JetBrains/ideaIU-2017.1.4.win/plugins/Kotlin/kotlinc
+#kotlin.home=G:/JetBrains/ideaIU-2017.1.4.win/plugins/Kotlin/kotlinc
+kotlin.home=/root/Env/Kotlin/kotlinc
 
 # Dockder
 docker.uri=http://127.0.0.1:2735
